@@ -3,4 +3,5 @@ SECTIONS
   .text : {*(.text)}
   . = ALIGN(data_align);
   .data : {*(.data)}
+  /DISCARD/ : {*(*)}
 }
