@@ -6,7 +6,7 @@
 Sections:
 Idx +Name +Size +VMA +LMA +File off +Algn
  +0 +\.text +[^ ]* +0+ +0+ .*
- +CONTENTS, +ALLOC, +LOAD, +READONLY, +CODE
+ +CONTENTS, +ALLOC, +LOAD,.* CODE
  +1 +\.data +[^ ]* +0+20 +0+20 .*
  +CONTENTS, +ALLOC, +LOAD, +DATA
 #pass
