@@ -1,3 +1,12 @@
+2005-02-21  Alan Modra  <amodra@bigpond.net.au>
+
+	* ld-elf/warn1.d: Specify -Ttext.
+	* ld-scripts/align.exp (align2a, align2b: Don't run on aout targets.
+	* ld-scripts/align2.t: Discard all but .text and .data.
+	* ld-scripts/align2a.d: Accept non-readonly for coff.
+	* ld-scripts/align2b.d: Likewise.
+	* lib/ld-lib.exp (is_aout_format): New function.
+
 2005-02-18  Alan Modra  <amodra@bigpond.net.au>
 
 	* ld-scripts/align2a.d: Don't assume anything about section
